# xlsq

./: Cargo.toml  DEPLOYMENT.md  Dockerfile  LICENSE  README.md  install.sh
.github/workflows/: ci.yml  release.yml
Formula/: xlsq.rb
src/: lib.rs  main.rs
tests/: integration_tests.rs  test_with_sample_data.rs
