[package]
name = "xlsq"
version = "0.1.0"
edition = "2021"
authors = ["Nikhilesh <nikhileshva@users.noreply.github.com>"]
description = "A fast and lightweight CLI tool for reading and searching Excel files (.xlsx)"
homepage = "https://github.com/nikhileshva/xlsq"
repository = "https://github.com/nikhileshva/xlsq"
readme = "README.md"
license = "MIT"
keywords = ["excel", "xlsx", "cli", "spreadsheet", "calamine"]
categories = ["command-line-utilities", "parsing"]
exclude = [
    "test_data/*",
    ".github/*",
]

[[bin]]
name = "xlsq"
path = "src/main.rs"

[dependencies]
calamine = "0.30"
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"

[dev-dependencies]
tempfile = "3.0"
xlsxwriter = "0.6"